cluster/wiki-js/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wiki-js
  name: wiki-js
  namespace: wiki
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wiki-js
  replicas: 2
  template:
    metadata:
      labels:
        app: wiki-js
    spec:
      containers:
        - env:
            - name: DB_TYPE
              value: postgres
            - name: DB_HOST
              value: db-login-prod-do-user-6724543-0.db.ondigitalocean.com
            - name: DB_PORT
              value: "25060"
            - name: DB_USER
              value: wikijs
            - name: DB_PASS
              valueFrom:
                secretKeyRef:
                  name: wiki-do-db-credentials
                  key: password
            - name: DB_NAME
              value: wikijs
            - name: DB_SSL
              value: "1"
            - name: DB_SSL_CA
              valueFrom:
                secretKeyRef:
                  name: wiki-do-db-ca
                  key: ca
            - name: HA_ACTIVE
              value: "1"
          image: ghcr.io/requarks/wiki:2.5.301
          imagePullPolicy: Always
          name: wiki-js
          ports:
            - containerPort: 3000
              name: 3000tcp
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "256Mi"
              cpu: "1000m"
            limits:
              memory: "1024Mi"
              cpu: "2000m"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - wiki-js
              topologyKey: kubernetes.io/hostname
