cluster/wiki-js/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wiki-js-svc
  namespace: wiki
  labels:
    app: wiki-js
spec:
  type: ClusterIP
  selector:
    app: wiki-js
  ports:
    - protocol: TCP
      port: 8383
      targetPort: 8383
