cluster/wiki-js/np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: wiki
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-dns
  namespace: wiki
spec:
  podSelector:
    matchLabels:
      app: wiki-js
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx-ingress-ntnu
      ports:
        - port: 3000
          protocol: TCP
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: wiki
          podSelector:
            matchLabels:
              cnpg.io/cluster: authentik-psql
      ports:
        - protocol: TCP
          port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-psql
  namespace: wiki
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      cnpg.io/cluster: wiki-psql
  ingress:
    - {}
  egress:
    - {}
